syntax = "proto3";

option java_multiple_files = false;
option java_package = "com.starbright";
option java_outer_classname = "HelloProto";

package com.starbright;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string result = 1;
}

service HelloService {
  rpc hello(HelloRequest) returns(HelloResponse) {}

  rpc hello1(stream HelloRequest) returns(stream HelloResponse) {}
}
